manifest/observability/monitoring/victoriametrics/vmselect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vmselect
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vmselect.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: vmselect.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: vmselect
              port:
                number: 8481
